# ccxt-proxy2

./: .dockerignore  .gitignore  Dockerfile  README.md  check_log.txt  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: docker-image.yml
Test/: conftest.py  test_cache_algorithm.py  test_continuity.py  test_edge_cases.py  test_get_ohlcv_with_cache.py  test_handle_cache.py  test_integration.py  test_log_manager.py  test_ohlcv_cache_consolidation_feature.py  test_ohlcv_cache_edge_cases.py  test_ohlcv_cache_multiple_calls.py  test_storage.py  test_trader_router.py  utils.py
bruno/: Root.bru  collection.bru
bruno/CCXT PROXY/: folder.bru
bruno/CCXT PROXY EXTENDED/: folder.bru
bruno/balance/: binance.bru  kraken.bru
bruno/cancel all/: binance.bru  folder.bru  kraken.bru
bruno/close all/: binance.bru  folder.bru  kraken.bru
bruno/environments/: ccxt-proxy2.bru
bruno/file hander/: download.bru  folder.bru  show list.bru  upload.bru
bruno/limit/: binance.bru  folder.bru  (+1 more)
debug/: check_kraken_502.py  check_market_info_full.py  check_precision.py  cleanup.py  debug_fetch_closed.py  debug_leverage.py  research_close_all.py  research_orders.py  utils.py  verify_all_fields.py  verify_binance_adapter.py  verify_response_models.py
docs/: 01_design.md  02_core_code.md  03_test_code.md  04_migration.md
minimal_example/: adjust_amount.py  chunk_calculator.py  exchange_demo.py  find_longest_sequence.py  find_sequences.py  group_continuous_files .py
src/: base_types.py  main.py  responses.py  responses_extended.py  types.py  types_extended.py
(+153 files in other folders)
