[project]
name = "ccxt-proxy2"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "ccxt>=4.5.3",
    "pydantic",
    "pyarrow>=21.0.0",
    "filelock>=3.19.1",
    "jinja2>=3.1.6",
    "scalar-fastapi>=1.4.0",
    "python-multipart>=0.0.20",
    "polars>=1.33.1",
    "numpy>=2.3.3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "pytest",
]
