[project]
name = "ccxt-proxy2"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "ccxt",
    "pydantic",
    "pyarrow",
    "filelock",
    "jinja2",
    "scalar-fastapi",
    "python-multipart",
    "polars",
    "numpy",
    "tzdata",
    "fastapi-login",
]


[dependency-groups]
dev = ["pytest"]
